--- a/notebooks/IO_main_figures.ipynb
+++ b/notebooks/IO_main_figures.ipynb
@@ -83,6 +83,7 @@
     "import hashlib\n",
     "import requests\n",
     "import sys\n",
+    "import scipy\n",
     "\n",
     "# Zenodo record ID\n",
     "ZENODO_RECORD = \"17359151\" \n",
@@ -128,7 +129,7 @@
     "print(\"ZENODO DATA DOWNLOADER\")\n",
     "print(\"=\" * 60)\n",
     "\n",
-    "if ZENODO_RECORD == \"17359151\":\n",
+    "if ZENODO_RECORD != \"17359151\":\n",
     "    print(\"\\n⚠️  WARNING: Zenodo record ID not set!\")\n",
     "    print(\"   Please update ZENODO_RECORD with the actual record ID\")\n",
     "    print(\"   after uploading data to Zenodo.\")\n",
