Change colormap from Spectral to Spectral_r

--- a/notebooks/IO_main_figures.ipynb
+++ b/notebooks/IO_main_figures.ipynb
@@ -823,9 +823,9 @@
     "fig, axs = plt.subplots(2,n_wins, figsize=(60,3))\n",
     "plt.subplots_adjust(hspace=0.2)\n",
     "for windows in range(n_wins):\n",
-    "    axs[0,windows].matshow(np.corrcoef(X_sliding[windows])[olo,:][:,olo], cmap = cm.Spectral)\n",
+    "    axs[0,windows].matshow(np.corrcoef(X_sliding[windows])[olo,:][:,olo], cmap = cm.Spectral_r)\n",
     "    axs[0,windows].set_title(f'{win_title[windows]:.1f}-{win_title[windows]+win_size/10:.1f} s')\n",
-    "    axs[1,windows].matshow(np.corrcoef(Y_sliding[windows])[olo,:][:,olo], cmap = cm.Spectral)\n",
+    "    axs[1,windows].matshow(np.corrcoef(Y_sliding[windows])[olo,:][:,olo], cmap = cm.Spectral_r)\n",
     "    axs[1,windows].get_xaxis().set_visible(False)\n",
     "for ax in axs.flat:\n",
     "    ax.label_outer()"
